# nexcision

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
docs/: workflow-integration.md
examples/: expected_filtered.nex  expected_removed_counts_per_region.tsv  input.nex  regions.tsv  validate_report.sh
examples/snakemake/: Snakefile  config.yaml
src/nexcision/: __init__.py  __main__.py  _version.py  cli.py  core.py
tests/: test_cli.py  test_core.py
